--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -19,7 +19,7 @@ header {
 footer {
     background-color: lightgrey;
     height: 40px;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     border: 1px solid gray;
@@ -38,24 +38,159 @@ footer {
 }
 #playlist-cards {
     display: grid;
-    background-color: pink;
-    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    margin: 0px 5% 0px 5%;
+    margin: 5px 5% 5px 5%;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 4fr));
     
 }
 
 .playlist-card {
-    width: 60%;
-    background-color: red;
+    min-width: 300px;
+    max-width: 350px;
+    background-color: pink;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
     margin: auto;
+    justify-content: center;
+    align-items: center;
 }
 
-h4 {
-    margin: 0px
+.like-function {
+    display: flex;
+    text-align: end;
+}
+
+.material-symbols-outlined {
+font-variation-settings:
+    'FILL' 1,
+    'wght' 50,
+    'GRAD' 0,
+    'opsz' 30;
+-webkit-text-fill-color: white;
+-webkit-text-stroke-color: black;
+-webkit-text-stroke-width: 2px;
 }
 
 
+.material-symbols-outlined:hover {
+    -webkit-text-stroke-color: red;
+}
+
+.heart {
+    background-color: transparent; /* Blue background */
+    border: transparent;
+    height: 24px;
+}
+
+.heart-text {
+    margin: 0px;
+}
+
+#heart-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.modal {
+    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+    height: 60%;
+    border-radius: 10px;
+    position: relative;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 16px;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#modal-rect {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#modal-rect2 {
+    height: 100%;
+    width: 80%;
+    overflow-y: auto;
+}
+
+#modal-playlist-image {
+    width: 30%;
+    height: 200px;
+    border-radius: 10px;
+}
+
+.modal-playlist {
+    display: flex;
+}
+
+.modal-playlist-content {
+    margin: 5px 0px 0px 20px;
+}
+
+.modal-song-container {
+    margin: 10px 0px 10px 0px;
+    border: gray, solid, 1px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+#modal-song-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 10px;
+    flex-grow: 1;
+}
+
+.modal-song-img {
+    width: 15%;
+    height: 80px;
+    margin: 10px
+}
+
+.no-mg {
+    margin: 0px;
+}
+
+.txt-14 {
+    font-size: 14px;
+}
+
+#modal-song-time {
+    align-self: center;
+    justify-self: flex-end;
+    margin: 10px;
+}
