--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -19,6 +19,10 @@ header {
     margin-bottom: 20px;
 }
 
+nav {
+    width: 100%;
+}
+
 
 
 footer {
@@ -34,6 +38,7 @@ footer {
     margin: 0px;
     list-style-type: none;
     color: dimgray;
+    display: flex;
 }
 
 .playlist-image {
@@ -46,8 +51,9 @@ footer {
     gap: 20px;
     margin: 5px 5% 5px 5%;
     grid-template-columns: repeat(auto-fill, minmax(300px, 4fr));
-    
 }
+
+
 
 .playlist-card {
     min-width: 300px;
@@ -61,9 +67,16 @@ footer {
     align-items: center;
 }
 
+.playlist-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+
 .like-function {
     display: flex;
     text-align: end;
+    margin-bottom: 10px;
 }
 
 .material-symbols-outlined {
@@ -204,4 +217,12 @@ font-variation-settings:
     align-self: center;
     justify-self: flex-end;
     margin: 10px;
+}
+
+.edit {
+    margin-right: 10px;
+}
+
+.delete {
+    margin-left: 15px;
 }
