--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -16,7 +16,7 @@ header {
     align-items: center;
     padding-left: 20px;
     border: 1px solid gray;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 nav {
@@ -277,3 +277,23 @@ fieldset {
 input {
     margin: 8px;
 }
+
+#search-bar-container {
+    width: 100%;
+    height: 30px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+}
+
+#search-bar {
+    display: flex;
+    flex-direction: row;
+}
+
+#search-input {
+    height: 24px;
+    margin: 0px 15px 0px 0px;
+    width: 200px;
+}
+
