--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -158,6 +158,16 @@ font-variation-settings:
     right: 16px;
 }
 
+.close2 {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 16px;
+}
+
 .close:hover,
 .close:focus {
     color: black;
@@ -194,6 +204,16 @@ font-variation-settings:
     overflow-y: auto;
     display: flex;
     justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
+} 
+
+#modal-rect4 {
+    height: 100%;
+    width: 80%;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 } 
@@ -289,11 +309,29 @@ input {
 #search-bar {
     display: flex;
     flex-direction: row;
+    position: relative
 }
 
 #search-input {
     height: 24px;
-    margin: 0px 15px 0px 0px;
+    margin: 0px 8px 0px 8px;
     width: 200px;
 }
 
+#clear-btn {
+    color: #aaa;
+    float: right;
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    top: 2px;
+    right: 75px;
+}
+
+#add-song-modal {
+    display: none
+}
+
+.search-button {
+    margin: 0px 5px 0px 5px;
+}
