--- a/music-playlist-creator/style.css
+++ b/music-playlist-creator/style.css
@@ -52,7 +52,7 @@ footer {
     display: grid;
     gap: 20px;
     margin: 5px 5% 5px 5%;
-    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 4fr));
 }
 
 
